[package]
name = "ioexporter"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]

ioexporter-common = { path = "../ioexporter-common", features = ["user"] }
aya = { version = "0.12", features = ["async_tokio"] }
aya-log = "0.2"
anyhow = "1"
env_logger = "0.10"
libc = "0.2"
log = "0.4"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
prometheus = "0.13.3"
ebpf-histogram = "0.1.0"
phf = { version = "0.11.2", features = ["macros"] }

[[bin]]
name = "ioexporter"
path = "src/main.rs"
